edited article page

--- a/src/pages/articles/introducing-animaginary.mdx
+++ b/src/pages/articles/introducing-animaginary.mdx
@@ -1,11 +1,11 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const meta = {
-  author: 'Adam Wathan',
-  date: '2022-09-02',
-  title: 'Introducing Animaginary: High performance web animations',
+  author: 'Zack Bolich',
+  date: '2022-04-16',
+  title: 'A Step-by-Step Guide to Using Stable Diffusions to Generate Images with Google Colab Notebooks',
   description:
-    'When you’re building a website for a company as ambitious as Planetaria, you need to make an impression. I wanted people to visit our website and see animations that looked more realistic than reality itself.',
+    ' Cutting-edge technology is much more accessible with the aid of Google Colab iPython notebooks. Google Colab is a free online platform that allows you to run Python code in your browser. This makes it easy to experiment with stable diffusions and other machine learning models.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
