--- a/src/pages/articles/introducing-animaginary.mdx
+++ b/src/pages/articles/introducing-animaginary.mdx
@@ -5,33 +5,27 @@ export const meta = {
   date: '2022-04-16',
   title: 'A Step-by-Step Guide to Using Stable Diffusions to Generate Images with Google Colab Notebooks',
   description:
-    ' Cutting-edge technology is much more accessible with the aid of Google Colab iPython notebooks. Google Colab is a free online platform that allows you to run Python code in your browser. This makes it easy to experiment with stable diffusions and other machine learning models.',
+    ' Cutting-edge technology is much more accessible with the aid of Google Colab iPython notebooks. Google Colab is a free online platform that allows you to run Python code in your browser. This makes it easy to experiment with Stable Diffusion and other machine learning models.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-When you’re building a website for a company as ambitious as Planetaria, you need to make an impression. I wanted people to visit our website and see animations that looked more realistic than reality itself.
+Stable Diffusion is a machine learning model that can be used to generate images from text descriptions. It is a powerful tool, but it can be difficult to use. This article will show you how to use the Google Colab notebook to run Stable Diffusion.
 
-To make this possible, we needed to squeeze every drop of performance out of the browser possible. And so Animaginary was born.
+<a href ="https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb">Google Colab</a>
 
-```js
-import { animate } from '@planetaria/animaginary'
-
-export function MyComponent({ open, children }) {
-  return (
-    <animate.div
-      in={open}
-      animateFrom="opacity-0 scale-95"
-      animateTo="opacity-100 scale-100"
-      duration={350}
-    >
-      {children}
-    </animate.div>
-  )
-}
+```python
+  # connect to google drive
+  from google.colab import drive
+  drive.mount('/content/drive') 
+  output_path = '/content/drive/MyDrive/' + output_path
+  if gMode == GDriveSaveMode.Everything:
+    # install A1111 in AI_PIC
+    root = output_path 
+  elif gMode == GDriveSaveMode.Models_only:
+    # install A1111 in Colab
+    root = '/content/' 
 ```
-
-Animaginary is our new web animation library that redefines what you thought was possible on the web. Hand-written in optimized WASM, Animaginary can even animate the `height` property of an element at 60fps.
 
 ## Sermone fata
 
@@ -48,18 +42,16 @@ dotibus ora, et findi huic invenit; fatis? Fractaque dare superinposita
 nimiumque simulatoremque sanguine, at voce aestibus diu! Quid veterum hausit tu
 nil utinam paternos ima, commentaque.
 
-```c
-exbibyte_wins = gigahertz(3);
-grayscaleUtilityClient = control_uat;
-pcmciaHibernate = oop_virus_console(text_mountain);
-if (stateWaisFirewire >= -2) {
-    jfs = 647065 / ldapVrml(tutorialRestore, 85);
-    metal_runtime_parse = roomComputingResolution - toolbarUpload +
-            ipx_nvram_open;
-} else {
-    maximizeSidebar *= suffix_url(flatbed + 2, requirements_encoding_node +
-            only_qbe_media, minicomputer);
-}
+```python
+  print("Installing ControlNet extension...")
+  %cd {root}/stable-diffusion-webui/extensions
+  !git clone https://github.com/Mikubill/sd-webui-controlnet
+  %cd {root}/stable-diffusion-webui/extensions/sd-webui-controlnet/models
+  ...
+  !wget https://huggingface.co/CrucibleAI/ControlNetMediaPipeFace/blob/main/control_mediapipe_face_sd21_v2.yaml
+    # Renaming files if needed
+  !rename 's/_sd14v1/-fp16/' *_sd14v1*
+  !pip install -r requirements.txt
 ```
 
 Aere repetiti cognataque natus. Habebat vela solutis saepe munus nondum adhuc
@@ -84,16 +76,15 @@ supplex. Summa brevis vetuere tenebas, hostes vetantis, suppressit, arreptum
 regna. Postquam conpescit iuvenis habet corpus, et erratica, perdere, tot mota
 ars talis.
 
-```c
-digital.webcam_dual_frequency = webmasterMms;
-if (5 + language_standalone_google) {
-    cc_inbox_layout *= file_character;
-    task += p;
-    lockUnicode += enterprise_monochrome(tokenFunctionPersonal, keyVirtual,
-            adf);
-}
-windows_binary_esports(87734, array(restoreRomTopology, adRaw(407314),
-        dongleBashThumbnail), interpreter);
+```python
+if NGROK:
+  args += f' --ngrok {NGROK} '
+else:
+  args += ' --share '
+if username and password:
+  args += f' --gradio-auth {username}:{password} '
+print(f'WEBUI ARGUMENTS: {args}')
+!python {root}/stable-diffusion-webui/launch.py {args}
 ```
 
 Sit volat naturam; motu Cancri. Erat pro simul quae valuit quoque timorem quam
